hphp/hack/test/typecheck/new_inference/tparam_constraints2.php.exp
File "tparam_constraints2.php", line 15, characters 24-34:
Invalid return type (Typing[4110])
File "tparam_constraints2.php", line 3, characters 35-42:
This is an array key (int/string)
File "tparam_constraints2.php", line 10, characters 37-40:
It is incompatible with void
